--- a/06-gobarber-web/package.json
+++ b/06-gobarber-web/package.json
@@ -26,6 +26,7 @@
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2",
     "uuidv4": "^6.1.1",
+    "websocket-extensions": "^0.1.4",
     "yup": "^0.29.1"
   },
   "scripts": {
