--- a/iniciando-back-end/.eslintrc.json
+++ b/iniciando-back-end/.eslintrc.json
@@ -22,7 +22,8 @@
     "no-underscore-dangle": "off",
     "prettier/prettier": "error",
     "class-methods-use-this": "off",
-    "@typescript-eslint/camelcase": "off",
+    "no-useless-constructor": "off",
+    "camelcase": "off",
     "@typescript-eslint/no-unused-vars": ["error", {
       "argsIgnorePattern": "_"
     }],
