Creating reset password and forgot password services/tests and mail provider

--- a/iniciando-back-end/.eslintrc.json
+++ b/iniciando-back-end/.eslintrc.json
@@ -20,6 +20,7 @@
       "prettier"
   ],
   "rules": {
+    "no-console": "off",
     "no-underscore-dangle": "off",
     "prettier/prettier": "error",
     "class-methods-use-this": "off",
