--- a/iniciando-back-end/package.json
+++ b/iniciando-back-end/package.json
@@ -20,6 +20,7 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
     "pg": "^8.2.1",
@@ -32,6 +33,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.5",
+    "@types/mongodb": "^3.5.25",
     "@types/multer": "^1.4.3",
     "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
