--- a/iniciando-back-end/package.json
+++ b/iniciando-back-end/package.json
@@ -14,6 +14,7 @@
     "@types/cors": "^2.8.6",
     "@types/jsonwebtoken": "^8.5.0",
     "bcryptjs": "^2.4.3",
+    "celebrate": "^12.2.0",
     "cors": "^2.8.5",
     "date-fns": "^2.14.0",
     "express": "^4.17.1",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.7",
+    "@types/hapi__joi": "^17.1.4",
     "@types/jest": "^26.0.5",
     "@types/mongodb": "^3.5.25",
     "@types/multer": "^1.4.3",
