--- a/iniciando-back-end/package.json
+++ b/iniciando-back-end/package.json
@@ -15,6 +15,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^12.2.0",
+    "class-transformer": "^0.3.1",
     "cors": "^2.8.5",
     "date-fns": "^2.14.0",
     "dotenv": "^8.2.0",
