--- a/iniciando-back-end/package.json
+++ b/iniciando-back-end/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
+    "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mime": "^2.4.6",
     "mongodb": "^3.6.0",
@@ -38,6 +39,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.7",
     "@types/hapi__joi": "^17.1.4",
+    "@types/ioredis": "^4.17.3",
     "@types/jest": "^26.0.5",
     "@types/mongodb": "^3.5.25",
     "@types/multer": "^1.4.3",
