--- a/iniciando-back-end/.env.example
+++ b/iniciando-back-end/.env.example
@@ -12,3 +12,8 @@ STORAGE_DRIVER=disk
 # AWS Credentials
 AWS_ACCESS_KEY_ID=ADICIONAR_ALGUM_ACCESS_KEY
 AWS_SECRET_ACCESS_KEY_ID=ADICIONAR_ALGUM_SECRET_ACCESS_KEY
+
+#Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASS=
