--- a/iniciando-back-end/tsconfig.json
+++ b/iniciando-back-end/tsconfig.json
@@ -17,5 +17,11 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "exclude": [
+    "coverage",
+    "node_modules",
+    "./jest.config.js",
+    "./prettier.config.js",
+  ]
 }
