--- a/06-gobarber-web/.eslintrc.json
+++ b/06-gobarber-web/.eslintrc.json
@@ -34,6 +34,7 @@
     "react/jsx-props-no-spreading": "off",
     "react/prop-types": "off",
     "no-unused-expressions": "off",
+    "camelcase": "off",
     "react/jsx-filename-extension": [
       1,
       {
