--- a/06-gobarber-web/.eslintrc.json
+++ b/06-gobarber-web/.eslintrc.json
@@ -33,6 +33,7 @@
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-props-no-spreading": "off",
     "react/prop-types": "off",
+    "import/no-duplicates": "off",
     "no-unused-expressions": "off",
     "camelcase": "off",
     "react/jsx-filename-extension": [
