--- a/06-gobarber-web/package.json
+++ b/06-gobarber-web/package.json
@@ -15,8 +15,10 @@
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
     "axios": "^0.19.2",
+    "date-fns": "^2.15.0",
     "polished": "^3.6.5",
     "react": "^16.13.1",
+    "react-day-picker": "^7.4.8",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-day-picker": "^5.3.0",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "eslint": "6.8.0",
