Dashboard header created

--- a/appgobarber/.eslintrc.json
+++ b/appgobarber/.eslintrc.json
@@ -34,6 +34,7 @@
       "react/jsx-props-no-spreading": "off",
       "react/prop-types": "off",
       "no-unused-expressions": "off",
+      "camelcase": "off",
       "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
       "import/prefer-default-export": "off",
       "prettier/prettier": "error",
