--- a/appgobarber/package.json
+++ b/appgobarber/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/cli-platform-android": "^4.10.1",
-    "@react-native-community/datetimepicker": "^3.0.1",
+    "@react-native-community/datetimepicker": "^2.4.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
@@ -20,6 +20,7 @@
     "@unform/core": "^2.1.3",
     "@unform/mobile": "^2.1.3",
     "axios": "^0.19.2",
+    "date-fns": "^2.16.1",
     "react": "16.11.0",
     "react-native": "^0.63.0",
     "react-native-gesture-handler": "^1.6.1",
